fix mobile page vertical sizing bug on mobile

--- a/app/sass/_global.scss
+++ b/app/sass/_global.scss
@@ -126,6 +126,7 @@ a{
   &.is-hidden{
     opacity: 0;
     z-index: 0;
+    height: 0;
     position:fixed !important;
   }
   &.is-visible{
